<resources>
    <string name="app_name">WeddingService</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Package</string>
    <string name="menu_service">Service</string>
    <string name="menu_hall">Hall</string>
    <string name="menu_food">Food and Drink</string>
    <string name="menu_fPackage">Food Package</string>
    <string name="menu_sPackage">Service Package</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>